# bitcoin-p2p

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
doc/: DESIGN_DOC.md
examples/: handshake.rs
src/: dns.rs  handshake.rs  lib.rs  net.rs  validation.rs
tests/: std.rs
