[package]
name = "bitcoin-p2p"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitcoin_p2p"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "16cc257c3695dea0e7301a5fa9cab44b8ed60598", features = ["rand-std"] }
p2p = { package = "bitcoin-p2p-messages",  git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "16cc257c3695dea0e7301a5fa9cab44b8ed60598" }

[dev-dependencies]
corepc-node = { version = "0.8.0", default-features = false, features = [
    "29_0", "download"
] }

[[example]]
name = "handshake"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
